Closed Bug 280463 Opened 21 years ago Closed 21 years ago

Crash on delete from address book sidebar after search [@ nsAbMDBDirectory::RemoveCardFromAddressList ]

Categories

(SeaMonkey :: MailNews: Address Book & Contacts, defect)

x86
All
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: standard8, Assigned: standard8)

References

Details

(Keywords: crash)

Crash Data

Attachments

(2 files)

I have extracted this from bug 280232 about random crashes in the sidebar as essentially there were two bugs in one, that appear unrelated so I wanted to be able to handle them seperately. This is the delete card part of that crash, talkback ID: TB3351981E, and many others from looking at the talkback server - affecting thunderbird 1.0, and more recently MAS trunk. I have found one way to reproduce, which may or may not be the only way: 1) Ensure address book has a card in it which is also in a mail list. 2) Start up browser and open the address book sidebar (i didn't have the normal address book open) 3) Select the appropriate address book. 4) Search for a card - my search was one letter which happened to match all my cards (and the list) 5) Clear the search 6) select the card that is in mail list, right click -> delete. Actual Results: Mozilla crashes. Expected results: Card to be deleted correctly. Note: I can replicate this in the same fashion with Thunderbird and the contacts panel when writing a message.
Adding stack trace from talkback server
This patch fixes the crash in the address book by checking for null pointers, and then also trying to cope with the address list not having been initialised by calling it. I have also added the fix from the patch on bug 152133 as that fixes an issue with deleting cards which are also in mailing lists and seemed relevant to this patch. See my attachement comment on that bug for some of the rational behind the 152133 fix (https://bugzilla.mozilla.org/show_bug.cgi?id=152133#c7).
Attachment #173208 - Flags: review?(bienvenu)
Blocks: 152133
Attachment #173208 - Flags: review?(bienvenu) → review+
Attachment #173208 - Flags: superreview?(mscott)
Scott, if you sr+ this patch, could you also check it in for me as well please? Thanks.
This crasher happens frequently on TB, and occasionally on Mail News. I'd like to suggest we get it in before 1.1 of TB.
Flags: blocking-aviary1.1?
Summary: Crash on delete from address book sidebar after search → Crash on delete from address book sidebar after search [@ nsAbMDBDirectory::RemoveCardFromAddressList ]
Version: unspecified → Trunk
Status: NEW → ASSIGNED
Scott any chance of an sr on this crasher sometime? It'd be good to get it in before the next set of releases. Thanks.
Attachment #173208 - Flags: superreview?(mscott) → superreview+
Fix checked in by timeless: 2005-03-02 10:24 timeless%mozdev.org mozilla/ mailnews/ addrbook/ src/ nsAbMDBDirectory.cpp 1.43 25/2
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Flags: blocking-aviary1.1?
Resolution: --- → FIXED
Verified FIXED for me with build 2005-03-03 using Windows XP Seamonkey trunk.
Status: RESOLVED → VERIFIED
Crash Signature: [@ nsAbMDBDirectory::RemoveCardFromAddressList ]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: