Bug 280463 Crash on delete from address book sidebar after search [@ nsAbMDBDirectory::RemoveCardFromAddressList ] Bug 152133 Deleting an address book entry leaves a blank entry in any mailing lists on which it was a member patch by mark@standard8.demon.co.uk r=bienvenu sr=mscott